added getBlogsByPairID api and modified the route of getBlogByBlogID
