# docs/swagger.json
@@ -57,7 +57,7 @@
                 }
             }
         },
-        "/blogs/{blogID}": {
+        "/blogs/blog/{blogID}": {
             "get": {
                 "description": "Get a blog",
                 "tags": [
@@ -84,7 +84,52 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.getBlogResponse"
+                            "$ref": "#/definitions/api.getBlogByBlogIDResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/blogs/{pairID}": {
+            "get": {
+                "description": "Get blogs by pair id",
+                "tags": [
+                    "blogs"
+                ],
+                "summary": "Get Blogs by PairID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pair ID",
+                        "name": "pairID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.getBlogsByPairIDResponse"
                         }
                     }
                 }
@@ -333,7 +378,7 @@
                 }
             }
         },
-        "api.getBlogResponse": {
+        "api.getBlogByBlogIDResponse": {
             "type": "object",
             "properties": {
                 "blog_id": {
@@ -353,6 +398,26 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "api.getBlogsByPairIDResponse": {
+            "type": "object",
+            "properties": {
+                "blogs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/db.Blog"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -440,6 +505,35 @@
                     "type": "string"
                 },
                 "password_changed_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "db.Blog": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "pair_id": {
+                    "type": "integer"
+                },
+                "picture": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "update_time": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
